add new functionality: weights_per_class

--- a/notebooks/flex_dataset_demo.ipynb
+++ b/notebooks/flex_dataset_demo.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## This is a demonstration of FlexDataset usage\n",
+    "## FlexDataset usage\n",
+    "In this notebooks, we show a few of the many ways in which FLEXible can federate a centralized dataset. In this notebook we will use MNIST as an example.\n",
     "\n",
-    "First and foremost, we download the dataset we want to federate in this case MNIST"
+    "First, we download it and shot a few samples:"
    ]
   },
   {
@@ -17,22 +18,8 @@
    "source": [
     "from tensorflow.keras.datasets import mnist\n",
     "\n",
-    "(train_X, train_y), (test_X, test_y) = mnist.load_data()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Show some samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "(train_X, train_y), (test_X, test_y) = mnist.load_data()\n",
+    "\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
     "for i in range(9):  \n",
@@ -46,7 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We encapsulate the chosen dataset in a `FlexDataObject`"
+    "In order to use our tools, we need to encapsulate the dataset in a `FlexDataObject`. \n",
+    "\n",
+    "Note that train_X and train_y are assumed to be NumPy arrays and train_y must be a one dimensional NumPy array."
    ]
   },
   {
@@ -65,12 +54,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we create a configuration, `FlexDatasetConfig` to federate our dataset, especifically:\n",
+    "To federate a centralized dataset, it is required to describe the federation process in a `FlexDatasetConfig` object.\n",
     "\n",
-    "    - We want to split the dataset between 10 clients.\n",
-    "    - Each client will have only one class.\n",
-    "    - Each client has only 20% of its assigned class.\n",
-    "    - Clients do not share classes between them."
+    "A `FlexDatasetConfig` object has the following fields:\n",
+    "\n",
+    "\n",
+    "- **seed**: Optional[int]\n",
+    "    Seed used to make the federated dataset generated reproducible with this configuration. Default None.\n",
+    "- **n_clients**: Optional[int]\n",
+    "    Number of clients among which to split the centralized dataset. If client_names is also given, we consider the number of clients to be the minimun between n_clients and the length of client_names. Default None.\n",
+    "- **client_names**: Optional[List[Hashable]]\n",
+    "    Names to identifty each client, if not provided clients will be indexed using integers. If n_clients is also given, we consider the number of clients to be the minimun of n_clients and the length of client_names. Default None.\n",
+    "- **weights**: Optional[npt.NDArray], A numpy.array which provides the proportion of data to give to each client. Default None.\n",
+    "- **replacement**: bool, whether the samping procedure used to split a centralized dataset is with replacement or not. Default True\n",
+    "- **classes_per_client**: Optional[Union[int, npt.NDArray, Tuple[int]]], classes to assign to each client, if provided as an int, it is the number classes per client, if provided as a tuple of ints, it establishes a mininum and a maximum of number of classes per client, a random number sampled in such interval decides the number of classes of each client. If provided as a list, it establishes the classes assigned to each client. Default None.\n",
+    "- **features_per_client**: Optional[Union[int, npt.NDArray, Tuple[int]]], Features to assign to each client, it share the same interface as classes_per_client.\n",
+    "- **indexes_per_client**: Optional[npt.NDArray]\n",
+    "    Data indexes to assign to each client, note that this option is incompatible with **classes_per_client**, **features_per_client** options. If replacement and weights are speficied, they are ignored.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's implement the following description:\n",
+    "\n",
+    "We have 10 federated clients, that do not share any instances, each client with data from a single class and with a 20% of the total data available for each class."
    ]
   },
   {
@@ -111,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Show the federated data"
+    "Show the federated data, to confirm that the federated split is correct:"
    ]
   },
   {
@@ -121,7 +130,7 @@
    "outputs": [],
    "source": [
     "for client in federated_dataset:\n",
-    "    print(f\"Client {client} has class {np.unique(federated_dataset[client].y_data)} and {len(federated_dataset[client])} elements, a sample of them is:\")\n",
+    "    print(f\"Node {client} has class {np.unique(federated_dataset[client].y_data)} and {len(federated_dataset[client])} elements, a sample of them is:\")\n",
     "    #pyplot.figure(figsize = (1,10))\n",
     "    fig, ax = plt.subplots(1, 10) # rows, cols\n",
     "    for i ,(x, y) in enumerate(federated_dataset[client]):\n",
@@ -136,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we try a more special configuration, we want to federate the dataset such that the number of data per client follows a gaussian distribution:"
+    "We try a more special configuration, we want to federate the dataset such that the number of data per client follows a gaussian distribution, consequently, we need to specify weights from a normal distribution:"
    ]
   },
   {
@@ -195,6 +204,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now, lets federate the dataset that fits the following description from [Personalized Federated Learning using Hypernetworks](https://paperswithcode.com/paper/personalized-federated-learning-using):\n",
+    "\n",
+    "First, we sample two/ten classes for each client for CIFAR10/CIFAR100; Next, for each client i and selected class c, we sample $ \\alpha_{i,c} \\sim U(.4, .6)$, and assign it with $\\frac{\\alpha_{i,c}}{\\sum_j \\alpha_{j,c}}$ of the samples for this class. We repeat the above using 10, 50 and 100 clients. This procedure produces clients with different number of samples and classes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sample two/ten classes for each client\n",
+    "config = FlexDatasetConfig(seed=0)\n",
+    "config.classes_per_client = (2, 10)\n",
+    "config.replacement = True # it is not clear whether clients share their data or not\n",
+    "config.n_clients = 10\n",
+    "num_classes = 10\n",
+    "\n",
+    "# Assign a sample proportion for each client-class pair\n",
+    "alphas = np.random.uniform(0.4, 0.6, [config.n_clients, num_classes])\n",
+    "alphas = alphas / np.sum(alphas, axis=0)\n",
+    "config.weights_per_class = alphas\n",
+    "\n",
+    "temp_federated_dataset = FlexDataDistribution.from_config(cdata=train_dataset, config=config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "If we want, we can normalize the dataset of each client easily, using the `map` function from `FlexDataset`, for example we force each client to keep only pair labels:"
    ]
   },
@@ -207,26 +246,27 @@
     "import numpy as np\n",
     "\n",
     "rng = np.random.default_rng(seed=0)\n",
-    "def keep_given_labels(client_dataset: FlexDataObject, selected_labels): # haz aquí otra operación que se te ocurra raruna\n",
-    "    client_dataset.X_data = client_dataset.X_data[np.isin(client_dataset.y_data, selected_labels)]\n",
-    "    client_dataset.y_data = client_dataset.y_data[np.isin(client_dataset.y_data, selected_labels)]\n",
-    "    return client_dataset\n",
+    "def keep_given_labels(client_dataset: FlexDataObject, selected_labels=None):\n",
+    "    if not selected_labels:\n",
+    "        selected_labels = []\n",
+    "    X_data = client_dataset.X_data[np.isin(client_dataset.y_data, selected_labels)]\n",
+    "    y_data = client_dataset.y_data[np.isin(client_dataset.y_data, selected_labels)]\n",
+    "    return FlexDataObject(X_data=X_data, y_data=y_data)\n",
     "\n",
-    "randomly_transformed_federated_dataset = normal_federated_dataset.map(None,  # Apply to all clients\n",
-    "                                                8,  # number of parallel processes \n",
-    "                                                keep_given_labels,  # function to apply \n",
-    "                                                [0, 2, 4, 6, 8] # argument for function\n",
+    "randomly_transformed_federated_dataset = normal_federated_dataset.map(func=keep_given_labels,  # function to apply\n",
+    "                                                num_proc=1,\n",
+    "                                                selected_labels=[0, 2, 4, 6, 8] # argument for function\n",
     "                                                )\n",
     "\n",
-    "for client in randomly_transformed_federated_dataset:\n",
+    "for i, client in enumerate(randomly_transformed_federated_dataset):\n",
     "    print(f\"Client {client} has classes {np.unique(randomly_transformed_federated_dataset[client].y_data)} and {len(randomly_transformed_federated_dataset[client])} elements, a sample of them is:\")\n",
     "    fig, ax = plt.subplots(1, 10) # rows, cols\n",
-    "    for i ,(x, y) in enumerate(randomly_transformed_federated_dataset[client]):\n",
-    "        ax[i].axis('off')\n",
-    "        ax[i].imshow(x, cmap=plt.get_cmap('gray'))\n",
-    "        if i >= 9:\n",
+    "    for j ,(x, y) in enumerate(randomly_transformed_federated_dataset[client]):\n",
+    "        ax[j].axis('off')\n",
+    "        ax[j].imshow(x, cmap=plt.get_cmap('gray'))\n",
+    "        if j >= 9:\n",
     "            break\n",
-    "    if client >= 10:\n",
+    "    if i >= 10:\n",
     "        break\n",
     "    plt.show()"
    ]
