add support for datasets from other frameworks

--- a/notebooks/flex_dataset_demo.ipynb
+++ b/notebooks/flex_dataset_demo.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## FlexDataset usage\n",
-    "In this notebooks, we show a few of the many ways in which FLEXible can federate a centralized dataset. In this notebook we will use MNIST as an example.\n",
+    "# How to federate datasets using FLEXible\n",
+    "\n",
+    "In this notebooks, we show a few of the many ways in which FLEXible can federate a centralized dataset. We will use MNIST and CIFAR10 datasets in this notebooks\n",
     "\n",
     "First, we download it and shot a few samples:"
    ]
@@ -16,17 +17,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.datasets import mnist\n",
+    "import tensorflow_datasets as tfds\n",
     "\n",
-    "(train_X, train_y), (test_X, test_y) = mnist.load_data()\n",
-    "\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "for i in range(9):  \n",
-    "    plt.subplot(330 + 1 + i)\n",
-    "    plt.axis('off') \n",
-    "    plt.imshow(train_X[i], cmap=plt.get_cmap('gray'))\n",
-    "plt.show()"
+    "ds_train, ds_test = tfds.load(\n",
+    "    'mnist',\n",
+    "    split=['train', 'test'],\n",
+    "    shuffle_files=True,\n",
+    "    as_supervised=True,\n",
+    "    batch_size=-1,\n",
+    ")"
    ]
   },
   {
@@ -46,8 +45,8 @@
    "source": [
     "from flex.data import FlexDataObject\n",
     "\n",
-    "train_dataset = FlexDataObject(X_data=train_X, y_data=train_y)\n",
-    "test_dataset = FlexDataObject(X_data=test_X, y_data=test_y)"
+    "train_dataset = FlexDataObject.from_tfds_dataset(ds_train)\n",
+    "test_dataset = FlexDataObject.from_tfds_dataset(ds_test)"
    ]
   },
   {
@@ -70,7 +69,21 @@
     "- **classes_per_client**: Optional[Union[int, npt.NDArray, Tuple[int]]], classes to assign to each client, if provided as an int, it is the number classes per client, if provided as a tuple of ints, it establishes a mininum and a maximum of number of classes per client, a random number sampled in such interval decides the number of classes of each client. If provided as a list, it establishes the classes assigned to each client. Default None.\n",
     "- **features_per_client**: Optional[Union[int, npt.NDArray, Tuple[int]]], Features to assign to each client, it share the same interface as classes_per_client.\n",
     "- **indexes_per_client**: Optional[npt.NDArray]\n",
-    "    Data indexes to assign to each client, note that this option is incompatible with **classes_per_client**, **features_per_client** options. If replacement and weights are speficied, they are ignored.\n"
+    "    Data indexes to assign to each client, note that this option is incompatible with **classes_per_client**, **features_per_client** options. If replacement and weights are speficied, they are ignored.\n",
+    "\n",
+    "    The following table shows the compatiblity of each option:\n",
+    "\n",
+    "    | Options compatibility   | **n_clients** | **client_names** | **weights** | **weights_per_class** | **replacement** | **classes_per_client** | **features_per_client** | **indexes_per_client** |\n",
+    "    |-------------------------|---------------|------------------|-------------|-----------------------|-----------------|------------------------|-------------------------|------------------------|\n",
+    "    | **n_clients**           | -             | Y                | Y           | Y                     | Y               | Y                      | Y                       | Y                      |\n",
+    "    | **client_names**        | Y             | -                | Y           | Y                     | Y               | Y                      | Y                       | Y                      |\n",
+    "    | **weights**             | Y             | Y                | -           | N                     | Y               | Y                      | Y                       | N                      |\n",
+    "    | **weights_per_class**   | Y             | Y                | N           | -                     | Y               | Y                      | N                       | N                      |\n",
+    "    | **replacement**         | Y             | Y                | Y           | Y                     | -               | Y                      | Y                       | N                      |\n",
+    "    | **classes_per_client**  | Y             | Y                | Y           | Y                     | Y               | -                      | N                       | N                      |\n",
+    "    | **features_per_client** | Y             | Y                | Y           | N                     | Y               | N                      | -                       | N                      |\n",
+    "    | **indexes_per_client**  | Y             | Y                | N           | N                     | N               | N                      | N                       | -                      |\n",
+    "\n"
    ]
   },
   {
@@ -145,6 +158,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Federate a dataset using weights to distribute data following a certain distribution\n",
+    "\n",
     "We try a more special configuration, we want to federate the dataset such that the number of data per client follows a gaussian distribution, consequently, we need to specify weights from a normal distribution:"
    ]
   },
@@ -204,9 +219,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, lets federate the dataset that fits the following description from [Personalized Federated Learning using Hypernetworks](https://paperswithcode.com/paper/personalized-federated-learning-using):\n",
+    "# A more complex dataset federation\n",
     "\n",
+    "Now, lets federate CIFAR10 that fits the following description from [Personalized Federated Learning using Hypernetworks](https://paperswithcode.com/paper/personalized-federated-learning-using)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First, we sample two/ten classes for each client for CIFAR10/CIFAR100; Next, for each client i and selected class c, we sample $ \\alpha_{i,c} \\sim U(.4, .6)$, and assign it with $\\frac{\\alpha_{i,c}}{\\sum_j \\alpha_{j,c}}$ of the samples for this class. We repeat the above using 10, 50 and 100 clients. This procedure produces clients with different number of samples and classes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) We download the cifar10 dataset using torchivision and create a FlexDataObject with it using ``from_torchvision_dataset``. Note that, it is mandatory to at least provide the ``ToTensor`` transform."
    ]
   },
   {
@@ -215,6 +244,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from torchvision import datasets, transforms\n",
+    "from flex.data import FlexDataObject\n",
+    "\n",
+    "cifar10 = datasets.CIFAR10(\n",
+    "        root=\".\",\n",
+    "        train=True,\n",
+    "        download=True\n",
+    ")\n",
+    "dataset = FlexDataObject.from_torchvision_dataset(cifar10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) Create a ``FlexDatasetConfig`` that fits the description given above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.data import FlexDatasetConfig\n",
+    "import numpy as np\n",
+    "\n",
     "# Sample two/ten classes for each client\n",
     "config = FlexDatasetConfig(seed=0)\n",
     "config.classes_per_client = (2, 10)\n",
@@ -225,9 +281,25 @@
     "# Assign a sample proportion for each client-class pair\n",
     "alphas = np.random.uniform(0.4, 0.6, [config.n_clients, num_classes])\n",
     "alphas = alphas / np.sum(alphas, axis=0)\n",
-    "config.weights_per_class = alphas\n",
+    "config.weights_per_class = alphas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Create the federated dataset by applying the created ``FlexDatasetConfig``to a ``FlexDataObject`` using ``FlexDataDistribution.from_config``"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from flex.data import FlexDataDistribution\n",
     "\n",
-    "temp_federated_dataset = FlexDataDistribution.from_config(cdata=train_dataset, config=config)"
+    "personalized_cifar_dataset = FlexDataDistribution.from_config(cdata=dataset, config=config)"
    ]
   },
   {
@@ -281,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('snowflakes')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -297,7 +369,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "4f7d2a9c5c2a9c2b510c9da0e3374aeab36a589c02bbbebadbda47bfb5610ebb"
