--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -69,12 +69,7 @@
    "outputs": [],
    "source": [
     "train_data, test_data = tfds.load(name=\"imdb_reviews\", split=[\"train\", \"test\"], \n",
-    "                                    batch_size=-1, as_supervised=True)\n",
-    "\n",
-    "train_examples, train_labels = tfds.as_numpy(train_data)\n",
-    "test_examples, test_labels = tfds.as_numpy(test_data)\n",
-    "\n",
-    "print(f\"Training entries: {len(train_examples)}, test entries: {len(test_examples)}\")"
+    "                                    batch_size=-1, as_supervised=True)"
    ]
   },
   {
@@ -83,7 +78,7 @@
    "source": [
     "# 1) From centralized data to federated data\n",
     "Firstly and foremost, we need to encapsulare our centralized dataset as numpy arrays in a FlexDataObject, to split it for every federated client.\n",
-    "As we are using a centrilized dataset, we have to federate it. To federate the data we need to create a basic data object for FLEXible that is called **FlexDataObject**. To create a  **FlexDataObject** we need to have the data as *numpy.arrays*."
+    "As we are using a centrilized dataset, we have to federate it. To federate the data we need to create a basic data object for FLEXible that is called **FlexDataObject**. To create a  **FlexDataObject** we use the method **from_tfds_dataset** which extracts the features and labels of the dataset and transform them into numpy arrays."
    ]
   },
   {
@@ -94,7 +89,7 @@
    "source": [
     "from flex.data import FlexDataObject\n",
     "\n",
-    "flex_data = FlexDataObject(X_data=train_examples, y_data=train_labels)"
+    "flex_data = FlexDataObject.from_tfds_dataset(train_data)"
    ]
   },
   {
@@ -462,7 +457,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('snowflakes')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -478,7 +473,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "4f7d2a9c5c2a9c2b510c9da0e3374aeab36a589c02bbbebadbda47bfb5610ebb"
