Added examples of torch/hf load datasets to the notebook 'flex_dataset_demo'

--- a/notebooks/flex_dataset_demo.ipynb
+++ b/notebooks/flex_dataset_demo.ipynb
@@ -347,6 +347,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Federate a dataset from torchtext, torchvision, tensorflow or huggingface\n",
+    "\n",
+    "There are a lot of datasets available on the main deep learning frameworks that make it easy to use their own framework. It's important to let the user to use this datasets, and we do so the user can use her favorites datasets and federate them.\n",
+    "\n",
+    "We show multiple examples on how to load and federate the datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# HuggingFace\n",
+    "from datasets import load_dataset\n",
+    "\n",
+    "# Load a dataset into a FlexDataObject\n",
+    "dataset_hf = load_dataset('ag_news', split='train')\n",
+    "X_columns = \"text\"\n",
+    "label_column = \"label\"\n",
+    "fcd_hf = FlexDataObject.from_huggingface_datasets(\n",
+    "    dataset_hf, X_columns=X_columns, label_column=label_column\n",
+    ")\n",
+    "fcd_hf.validate()\n",
+    "\n",
+    "# Create a config and federate the dataset\n",
+    "config_hf = FlexDatasetConfig(\n",
+    "    seed=0,\n",
+    "    n_clients=2,\n",
+    "    replacement=False,\n",
+    "    client_names=[\"client_0\", \"client_1\"],\n",
+    ")\n",
+    "\n",
+    "\n",
+    "flex_dataset_two_step_hf = FlexDataDistribution.from_config(\n",
+    "    cdata=fcd, config=config\n",
+    ")\n",
+    "\n",
+    "# Federate the dataset directly.\n",
+    "flex_dataset_hf = FlexDataDistribution.from_huggingface_dataset(\n",
+    "    dataset_hf, config, X_columns, label_column\n",
+    ")\n",
+    "\n",
+    "print(f\"Flex dataset two steps: {flex_dataset_two_step_hf['client_0'].X_data[0]}\")\n",
+    "print(f\"Flex dataset direct: {flex_dataset_hf['client_0'].X_data[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PyTorch Text\n",
+    "from torchtext.datasets import AG_NEWS\n",
+    "\n",
+    "# Loading the dataset into a FlexDataObject\n",
+    "dataset_torch = AG_NEWS(split='train')\n",
+    "fcd_torch = FlexDataObject.from_torchtext_dataset(dataset_torch)\n",
+    "fcd_torch.validate()\n",
+    "\n",
+    "# Creating the configuration\n",
+    "# We will use the same configuration than in the HuggingFace example\n",
+    "config_torch = config_hf\n",
+    "\n",
+    "# Federate the FlexDataObject we just created\n",
+    "flex_dataset_two_step_torch = FlexDataDistribution.from_config(\n",
+    "    cdata=fcd_torch,\n",
+    "    config=config_torch\n",
+    ")\n",
+    "\n",
+    "# Federate the dataset directly\n",
+    "flex_dataset_torch = FlexDataDistribution.from_pytorch_text_dataset(\n",
+    "    dataset_torch,\n",
+    "    config\n",
+    ")\n",
+    "\n",
+    "print(f\"Flex dataset two steps: {flex_dataset_two_step_torch['client_0'].X_data[0]}\")\n",
+    "print(f\"Flex dataset direct: {flex_dataset_torch['client_0'].X_data[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### END\n",
     "Congratulations, now you know how to federate a dataset using the *FlexDataDistribution* and the *FlexDatasetConfig* classes, so you can setup multiple experimental settings that fit most your hipothesis."
    ]
@@ -368,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
