--- a/notebooks/flex_dataset_demo.ipynb
+++ b/notebooks/flex_dataset_demo.ipynb
@@ -107,7 +107,7 @@
     "config = FlexDatasetConfig(seed = 0) # We fix a seed to make our federation reproducible\n",
     "config.n_clients = 10 # 10 clients\n",
     "config.replacement = False # ensure that clients do not share any data\n",
-    "config.classes_per_client = np.unique(train_y) # assign each client one class\n",
+    "config.classes_per_client = np.unique(train_dataset.y_data) # assign each client one class\n",
     "config.weights = [0.2] * config.n_clients # each client has only 20% of its assigned class"
    ]
   },
@@ -288,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3) Create the federated dataset by applying the created ``FlexDatasetConfig``to a ``FlexDataObject`` using ``FlexDataDistribution.from_config``"
+    "3. Create the federated dataset by applying the created ``FlexDatasetConfig`` to a ``FlexDataObject`` using ``FlexDataDistribution.from_config``"
    ]
   },
   {
@@ -325,7 +325,7 @@
     "    y_data = client_dataset.y_data[np.isin(client_dataset.y_data, selected_labels)]\n",
     "    return FlexDataObject(X_data=X_data, y_data=y_data)\n",
     "\n",
-    "randomly_transformed_federated_dataset = normal_federated_dataset.map(func=keep_given_labels,  # function to apply\n",
+    "randomly_transformed_federated_dataset = personalized_cifar_dataset.map(func=keep_given_labels,  # function to apply\n",
     "                                                num_proc=1,\n",
     "                                                selected_labels=[0, 2, 4, 6, 8] # argument for function\n",
     "                                                )\n",
@@ -453,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
