Changed how to load the data in the torch notebook, now using from_torchtext_dataset/from_huggingface_dataset.

--- a/notebooks/flex_text_classification_torch_demo.ipynb
+++ b/notebooks/flex_text_classification_torch_demo.ipynb
@@ -31,7 +31,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import os\n",
     "import time\n",
     "\n",
@@ -83,9 +82,11 @@
    "source": [
     "tokenizer = get_tokenizer('basic_english') # Get the tokenizer\n",
     "\n",
-    "ag_news_dataset = load_dataset('ag_news') # Get the dataset from huggingface library\n",
+    "ag_news_dataset = load_dataset('ag_news', split='test') # Get the dataset from huggingface library\n",
     "train_data = ag_news_dataset['train'] # Get the train data\n",
     "test_data = ag_news_dataset['test'] # Get the test data\n",
+    "\n",
+    "dataset_ag_news = AG_NEWS(split='train')\n",
     "\n",
     "# Function to help us building the vocabulary\n",
     "def yield_tokens_hf(data):\n",
@@ -111,7 +112,9 @@
    "source": [
     "# 1) From centralized data to federated data\n",
     "Firstly and foremost, we need to encapsulare our centralized dataset as numpy arrays in a FlexDataObject, to split it for every federated client.\n",
-    "As we are using a centrilized dataset, we have to federate it. To federate the data we need to create a basic data object for FLEXible that is called **FlexDataObject**. To create a  **FlexDataObject** we need to have the data as *numpy.arrays*."
+    "As we are using a centrilized dataset, we have to federate it. To federate the data we need to create a basic data object for FLEXible that is called **FlexDataObject**. To create a  **FlexDataObject** we need to have the data as *numpy.arrays*.\n",
+    "\n",
+    "The dataset AG_News is available in both TorchText and HuggingFace datasets, so we can use both to load the data as a FlexDataObject."
    ]
   },
   {
@@ -122,7 +125,9 @@
    "source": [
     "from flex.data import FlexDataObject\n",
     "\n",
-    "flex_data = FlexDataObject(X_data=train_examples, y_data=train_labels)"
+    "flex_data = FlexDataObject.from_torchtext_dataset(dataset_ag_news)\n",
+    "\n",
+    "flex_data = FlexDataObject.from_huggingface_dataset(hf_dataset=train_data, X_columns='text', label_column='label')"
    ]
   },
   {
