add an example of federating a clustering algorithm

--- a/notebooks/Federating data with FLEXible.ipynb
+++ b/notebooks/Federating data with FLEXible.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this notebooks, we show a few of the many ways in which FLEXible can federate a centralized dataset. We will use MNIST and CIFAR10 datasets in this notebooks\n",
     "\n",
-    "First, we download it and shot a few samples:"
+    "First, we download it and split it in train and test:"
    ]
   },
   {
