--- a/notebooks/Federating a linear regression model.ipynb
+++ b/notebooks/Federating a linear regression model.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Federating a K-means clustering algorithm\n",
+    "# Federating a linear regression model\n",
     "\n",
-    "In this notebook we show how to use FLEXible to federate a *unsupervised* learning model. We federate the K-means clustering algorithm provided in the [sklearn library](https://scikit-learn.org/stable/modules/clustering.html#k-means)."
+    "In this notebook we show how to use FLEXible to federate a linear regression model. We federate the linear regression algorithm provided in the [sklearn library](https://scikit-learn.org/stable/modules/clustering.html#k-means). This example is an adaption of the one provided [here](https://scikit-learn.org/stable/auto_examples/linear_model/plot_ols.html)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As usual, we first download and split the dataset we are going to use in this notebook:"
+    "As usual, we first download and split the dataset we are going to use in this notebook, for simplicity we will ony use the one feature from the sklearn diabetes dataset."
    ]
   },
   {
@@ -22,12 +22,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.datasets import load_iris\n",
+    "from sklearn.datasets import load_diabetes\n",
     "from sklearn.model_selection import train_test_split\n",
+    "import numpy as np\n",
     "\n",
-    "iris = load_iris()\n",
+    "# Load the diabetes dataset\n",
+    "diabetes = load_diabetes()\n",
+    "\n",
     "# Generate train-test splits\n",
-    "X_train, X_test, y_train, y_test = train_test_split(iris.data, iris.target, test_size=0.33, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(diabetes.data[:, np.newaxis, 2], diabetes.target, test_size=0.33, random_state=42)"
    ]
   },
   {
@@ -45,17 +48,17 @@
    "source": [
     "from flex.data import FlexDataDistribution, FlexDataObject\n",
     "\n",
-    "train_iris = FlexDataObject(X_train, y_train)\n",
-    "test_iris = FlexDataObject(X_test, y_test)\n",
+    "train_diabetes = FlexDataObject(X_train, y_train)\n",
+    "test_diabetes = FlexDataObject(X_test, y_test)\n",
     "\n",
-    "federated_iris = FlexDataDistribution.iid_distribution(train_iris, n_clients=5)"
+    "federated_diabetes = FlexDataDistribution.iid_distribution(train_diabetes, n_clients=5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we present a centralized K-means model and evaluate it, the main objective of this notebook is showing how to federate such model using FLEXible. The performance is assessed by several clustering metrics (see [this link](https://scikit-learn.org/stable/modules/clustering.html#clustering-evaluation))."
+    "Now, we present a centralized linear regression model and evaluate it, the main objective of this notebook is showing how to federate such model using FLEXible."
    ]
   },
   {
@@ -64,24 +67,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.cluster import KMeans\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def plot_k_means(km, test_data, title):\n",
-    "    preds=km.predict(test_data)\n",
-    "    fig, axes=plt.subplots(1, 2, figsize=(13,6))\n",
-    "    fig.suptitle(title, fontsize=16)\n",
-    "    axes[0].scatter(test_data[:, 0], test_data[:, 1], c=preds)\n",
-    "    axes[0].set_xlabel('Sepal length')\n",
-    "    axes[0].set_ylabel('Sepal width')\n",
+    "def plot_lm(lm, test_data, title):\n",
+    "    preds = lm.predict(test_data.X_data)\n",
+    "    # Plot outputs\n",
+    "    plt.title(title)\n",
+    "    plt.scatter(test_data.X_data, test_data.y_data, color=\"black\")\n",
+    "    plt.plot(test_data.X_data, preds, color=\"blue\", linewidth=3)\n",
+    "\n",
     "    \n",
-    "    axes[1].scatter(test_data[:, 2], test_data[:, 3], c=preds)\n",
-    "    axes[1].set_xlabel('Petal length')\n",
-    "    axes[1].set_ylabel('Petal width')\n",
-    "    \n",
-    "centralized_model = KMeans(n_clusters=3)\n",
-    "centralized_model.fit(train_iris.X_data)\n",
-    "plot_k_means(centralized_model, test_iris.X_data, title=\"Benchmark: K-means using centralized data\")"
+    "centralized_model = LinearRegression()\n",
+    "centralized_model = centralized_model.fit(train_diabetes.X_data, train_diabetes.y_data)\n",
+    "plot_lm(centralized_model, test_diabetes, \"Centralized model\")"
    ]
   },
   {
@@ -91,23 +90,22 @@
    "outputs": [],
    "source": [
     "from sklearn import metrics\n",
+    "from math import sqrt\n",
     "\n",
     "def score_model(labels, preds):\n",
     "    \n",
-    "    homogeneity_score = metrics.homogeneity_score(labels, preds)\n",
-    "    completeness_score = metrics.completeness_score(labels, preds)\n",
-    "    v_measure_score = metrics.v_measure_score(labels, preds)\n",
-    "    adjusted_rand_score = metrics.adjusted_rand_score(labels, preds)\n",
+    "    rmse = sqrt(metrics.mean_squared_error(labels, preds))\n",
+    "    r2_score = metrics.r2_score(labels, preds)\n",
     "\n",
-    "    results = homogeneity_score, completeness_score, v_measure_score, adjusted_rand_score\n",
+    "    results = rmse, r2_score\n",
     "    \n",
-    "    print(\"-------------------------------------\")\n",
-    "    print(\"Homogeneity: {},\\nCompleteness: {},\\nV-measure: {},\\nRand index (adjusted): {}\".format(*results))\n",
-    "    print(\"-----------------------------------\")\n",
+    "    print(\"-----------------\")\n",
+    "    print(\"RMSE: {},\\nr2: {}\".format(*results))\n",
+    "    print(\"-----------------\")\n",
     "    \n",
     "print(\"Centralized model scores\")\n",
-    "preds = centralized_model.predict(test_iris.X_data)\n",
-    "score_model(test_iris.y_data, preds)"
+    "preds = centralized_model.predict(test_diabetes.X_data)\n",
+    "score_model(test_diabetes.y_data, preds)"
    ]
   },
   {
@@ -116,17 +114,11 @@
    "source": [
     "## The federation process begins!\n",
     "\n",
-    "### Solution details\n",
-    "Since the labels of clusters can vary among each node, we cannot average the centroids right away. \n",
-    "One solution is to choose the lowest distance average: this is achieved by simply applying the K-means algorithm to the centroids coordinates of all nodes.\n",
-    "\n",
-    "Note that this implementation is based on the assumption that the number of clusters has been previously fixed across the clients, so it only works properly in IID scenarios.\n",
-    "\n",
     "### Implementation in FLEXible\n",
     "\n",
     "The implementation of a federated algorithm in FLEXible always begins with the same steps: \n",
     "1. Defining a function to initialize the model in the server node. Note that function `build_server_model` is decorated with decorator `init_server_model`, in this way, we only need to care about loading a model in a FlexModel object.\n",
-    "1. Creating an architecture, in this case, a client server architecture by means of `client_server_architecture`. Note that, the number of clients is provided in `federated_iris` and it can be retrieved using `len(federated_iris)`. \n",
+    "1. Creating an architecture, in this case, a client server architecture by means of `client_server_architecture`. Note that, the number of clients is provided in `federated_diabetes` and it can be retrieved using `len(federated_diabetes)`. \n",
     "\n",
     "The `FlexPool` generated contains 20 clients an 1 server, which is also an aggregator node. Remember that nodes in a `FlexPool` communicate with each other using the `map` function."
    ]
@@ -142,16 +134,13 @@
     "\n",
     "\n",
     "@init_server_model\n",
-    "def build_server_model(n_clusters=10):\n",
+    "def build_server_model():\n",
     "    flex_model = FlexModel()\n",
-    "    flex_model.model = KMeans(n_clusters=n_clusters)\n",
-    "    flex_model.model._n_threads = 1\n",
+    "    flex_model.model = LinearRegression()\n",
     "    return flex_model\n",
     "\n",
     "\n",
-    "p = FlexPool.client_server_architecture(\n",
-    "    federated_iris, init_func=build_server_model, n_clusters=3\n",
-    ")\n",
+    "p = FlexPool.client_server_architecture(federated_diabetes, init_func=build_server_model)\n",
     "\n",
     "clients = p.clients\n",
     "servers = p.servers\n",
@@ -202,7 +191,7 @@
    "outputs": [],
    "source": [
     "def train(client_flex_model: FlexModel, client_data: FlexDataObject):\n",
-    "    client_flex_model.model.fit(client_data.X_data)\n",
+    "    client_flex_model.model.fit(client_data.X_data, client_data.y_data)\n",
     "\n",
     "clients.map(train)"
    ]
@@ -224,7 +213,7 @@
     "\n",
     "@collect_clients_weights\n",
     "def get_clients_weights(client_flex_model: FlexModel):\n",
-    "    return client_flex_model.model.cluster_centers_\n",
+    "    return [client_flex_model.model.intercept_, client_flex_model.model.coef_]\n",
     "\n",
     "aggregators.map(get_clients_weights, clients)\n",
     "# The same as:\n",
@@ -251,11 +240,7 @@
     "\n",
     "@aggregate_weights\n",
     "def aggregate(list_of_weights: list):\n",
-    "    weight_arr = np.concatenate(list_of_weights)\n",
-    "    n_clusters = len(list_of_weights[0])\n",
-    "    model_aggregator = KMeans(n_clusters=n_clusters)\n",
-    "    model_aggregator.fit(weight_arr)\n",
-    "    return model_aggregator.cluster_centers_\n",
+    "    return np.mean(np.asarray(list_of_weights, dtype=object), axis=0)\n",
     "\n",
     "# Aggregate weights\n",
     "aggregators.map(aggregate)\n",
@@ -280,7 +265,8 @@
     "\n",
     "@set_aggregated_weights\n",
     "def set_agreggated_weights_to_server(server_flex_model: FlexModel, aggregated_weights):\n",
-    "    server_flex_model.model.cluster_centers_ = aggregated_weights\n",
+    "    server_flex_model.model.intercept_ = aggregated_weights[0]\n",
+    "    server_flex_model.model.coef_ = aggregated_weights[1]\n",
     "\n",
     "# Set aggregated weights in the server model\n",
     "aggregators.map(set_agreggated_weights_to_server, servers)\n",
@@ -306,10 +292,10 @@
     "@evaluate_server_model\n",
     "def evaluate_global_model(server_flex_model: FlexModel, test_data=None):\n",
     "    preds = server_flex_model.model.predict(test_data.X_data)\n",
-    "    plot_k_means(server_flex_model.model, test_data.X_data, title=\"K-means using federated data\")\n",
+    "    plot_lm(server_flex_model.model, test_data, title=\"K-means using federated data\")\n",
     "    score_model(test_data.y_data, preds)\n",
     "\n",
-    "servers.map(evaluate_global_model, test_data=test_iris)"
+    "servers.map(evaluate_global_model, test_data=test_diabetes)"
    ]
   },
   {
@@ -318,7 +304,7 @@
    "source": [
     "### Run the federated learning experiment for a few rounds\n",
     "\n",
-    "Now, we can summarize the steps provided above and run the federated experiment for multiple rounds:"
+    "Now, we can summarize the steps provided above and run the federated experiment for multiple rounds, note that in this case, we set the number of rounds to 1 since no iterations are needed in the case of linear regression. "
    ]
   },
   {
@@ -327,10 +313,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_rounds = 5\n",
-    "p = FlexPool.client_server_architecture(\n",
-    "    federated_iris, init_func=build_server_model, n_clusters=3\n",
-    ")\n",
+    "n_rounds = 1\n",
+    "p = FlexPool.client_server_architecture(federated_diabetes, init_func=build_server_model)\n",
     "servers = p.servers\n",
     "clients = p.clients\n",
     "aggregators = p.aggregators\n",
@@ -343,7 +327,7 @@
     "    aggregators.map(set_agreggated_weights_to_server, servers)\n",
     "\n",
     "print(\"Federated model scores\")\n",
-    "servers.map(evaluate_global_model, test_data=test_iris)"
+    "servers.map(evaluate_global_model, test_data=test_diabetes)"
    ]
   },
   {
@@ -355,17 +339,10 @@
    "outputs": [],
    "source": [
     "print(\"Centralized model scores\")\n",
-    "preds = centralized_model.predict(test_iris.X_data)\n",
-    "score_model(test_iris.y_data, preds)\n",
-    "plot_k_means(centralized_model, test_iris.X_data, title=\"K-means using centralized data\")"
+    "preds = centralized_model.predict(test_diabetes.X_data)\n",
+    "score_model(test_diabetes.y_data, preds)\n",
+    "plot_lm(centralized_model, test_diabetes, title=\"K-means using centralized data\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
