Updated two notebooks. Still needs to update the notebook using decorators.

--- a/notebooks/flex_text_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_simplified.ipynb
@@ -46,8 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, test_data = tfds.load(name=\"imdb_reviews\", split=[\"train\", \"test\"], \n",
-    "                                    batch_size=-1, as_supervised=True)"
+    "train_data, test_data = tfds.load(name=\"imdb_reviews\", split=[\"train\", \"test\"])"
    ]
   },
   {
@@ -58,7 +57,7 @@
    "source": [
     "from flex.data import FlexDataObject\n",
     "\n",
-    "flex_data = FlexDataObject.from_tfds_dataset(train_data)"
+    "flex_data = FlexDataObject.from_tfds_text_dataset(train_data, X_columns='text', label_column='label')"
    ]
   },
   {
@@ -100,13 +99,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.flex_primitives import initialize_server_model\n",
-    "from flex.pool.flex_primitives import deploy_global_model_to_clients\n",
-    "from flex.pool.flex_primitives import deploy_model_to_clients\n",
-    "from flex.pool.flex_primitives import collect_weights\n",
-    "from flex.pool.flex_primitives import aggregate_weights\n",
-    "from flex.pool.flex_primitives import evaluate_model\n",
-    "from flex.pool.flex_primitives import train"
+    "from flex.pool.flex_primitives import initialize_server_model_tf\n",
+    "from flex.pool.flex_primitives import deploy_server_model_to_clients_tf\n",
+    "from flex.pool.flex_primitives import collect_weithts_tf\n",
+    "from flex.pool.flex_primitives import train_tf\n",
+    "from flex.pool.flex_primitives import set_aggregated_weights_tf\n",
+    "from flex.pool.flex_primitives import evaluate_server_model_tf\n",
+    "from flex.pool.flex_aggregators import fed_avg"
    ]
   },
   {
@@ -138,7 +137,7 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model, model=define_model, verbose=1, model_params=[])"
+    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model_tf, model=define_model())"
    ]
   },
   {
@@ -159,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(deploy_model_to_clients, clients, verbose=1)"
+    "server.map(deploy_server_model_to_clients_tf, clients)"
    ]
   },
   {
@@ -168,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(train, batch_size=512, epochs=2)"
+    "clients.map(train_tf, batch_size=512, epochs=1)"
    ]
   },
   {
@@ -186,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(collect_weights, aggregator)"
+    "aggregator.map(collect_weithts_tf, clients)"
    ]
   },
   {
@@ -195,8 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fed_avg(agg_model):\n",
-    "    return np.mean(np.array(agg_model), axis=0)"
+    "aggregator.map(fed_avg)"
    ]
   },
   {
@@ -205,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator.map(aggregate_weights, verbose=1, func_aggregate=fed_avg)"
+    "aggregator.map(set_aggregated_weights_tf, server)"
    ]
   },
   {
@@ -214,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(deploy_global_model_to_clients, clients)"
+    "server.map(deploy_server_model_to_clients_tf, clients)"
    ]
   },
   {
@@ -223,7 +221,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_examples, test_labels = test_data"
+    "test_data = FlexDataObject.from_tfds_text_dataset(test_data, X_columns='text', label_column='label')\n",
+    "test_examples, test_labels = test_data.X_data, test_data.y_data"
    ]
   },
   {
@@ -232,16 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clients.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "server.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
    ]
   },
   {
@@ -258,17 +248,15 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):  \n",
-    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model, model=define_model, verbose=1, model_params=[])\n",
-    "    pool.servers.map(deploy_model_to_clients, pool.clients, verbose=1)\n",
+    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model_tf, model=define_model())\n",
+    "    pool.servers.map(deploy_server_model_to_clients_tf, pool.clients)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
-    "        clients.map(train, batch_size=512, epochs=2)\n",
-    "        pool.clients.map(train, batch_size=batch_size, epochs=epochs, verbose=1)\n",
-    "        pool.clients.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)\n",
-    "        pool.clients.map(collect_weights, pool.aggregators, verbose=1)\n",
-    "        pool.aggregators.map(aggregate_weights, verbose=1, func_aggregate=fed_avg)\n",
-    "        pool.servers.map(deploy_global_model_to_clients, pool.clients, verbose=1)\n",
-    "        pool.servers.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "        pool.clients.map(train_tf, batch_size=batch_size, epochs=epochs)\n",
+    "        pool.aggregators.map(collect_weithts_tf, pool.clients)\n",
+    "        pool.aggregators.map(fed_avg)\n",
+    "        pool.servers.map(deploy_server_model_to_clients_tf, pool.clients)\n",
+    "        pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
    ]
   },
   {
