--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -68,8 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, test_data = tfds.load(name=\"imdb_reviews\", split=[\"train\", \"test\"], \n",
-    "                                    batch_size=-1, as_supervised=True)"
+    "train_data, test_data = tfds.load(name=\"imdb_reviews\", split=[\"train\", \"test\"])"
    ]
   },
   {
@@ -89,7 +88,7 @@
    "source": [
     "from flex.data import FlexDataObject\n",
     "\n",
-    "flex_data = FlexDataObject.from_tfds_dataset(train_data)"
+    "flex_data = FlexDataObject.from_tfds_text_dataset(train_data, X_columns='text', label_column='label')"
    ]
   },
   {
@@ -200,7 +199,7 @@
     "def deploy_model_to_clients(server_model, clients_model, *args, **kwargs):\n",
     "    print(\"Initializing model at a client\")\n",
     "    for client_id in clients_model:\n",
-    "        clients_model[client_id] = deepcopy(server_model)"
+    "        clients_model[client_id]['model'] = deepcopy(server_model['model'])"
    ]
   },
   {
@@ -270,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(train, batch_size=512, epochs=2)"
+    "clients.map(train, batch_size=512, epochs=1)"
    ]
   },
   {
@@ -397,7 +396,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_examples, test_labels = test_data"
+    "# test_examples, test_labels = test_data\n",
+    "test_examples = FlexDataObject.from_tfds_text_dataset(test_data, X_columns='text', label_column='label')"
    ]
   },
   {
@@ -406,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "server.map(evaluate_model, test_examples=test_examples.X_data, test_labels=test_examples.y_data)"
    ]
   },
   {
@@ -415,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clients.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "clients.map(evaluate_model, test_examples=test_examples.X_data, test_labels=test_examples.y_data)"
    ]
   },
   {
@@ -439,11 +439,11 @@
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
     "        pool.clients.map(train, batch_size=batch_size, epochs=epochs)\n",
-    "        pool.clients.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)\n",
+    "        pool.clients.map(evaluate_model, test_examples=test_examples.X_data, test_labels=test_examples.y_data)\n",
     "        pool.clients.map(collect_weights, pool.aggregators)\n",
     "        pool.aggregators.map(aggregate_weights)\n",
     "        pool.servers.map(deploy_global_model_to_clients, pool.clients)\n",
-    "        pool.servers.map(evaluate_model, test_examples=test_examples, test_labels=test_labels)"
+    "        pool.servers.map(evaluate_model, test_examples=test_examples.X_data, test_labels=test_examples.y_data)"
    ]
   },
   {
