Solved some bugs

--- a/notebooks/flex_text_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_simplified.ipynb
@@ -135,6 +135,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = define_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from flex.pool import FlexPool\n",
     "\n",
     "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model_tf, model=define_model())"
@@ -255,6 +264,7 @@
     "        pool.clients.map(train_tf, batch_size=batch_size, epochs=epochs)\n",
     "        pool.aggregators.map(collect_weithts_tf, pool.clients)\n",
     "        pool.aggregators.map(fed_avg)\n",
+    "        pool.aggregators.map(set_aggregated_weights_tf, pool.servers)\n",
     "        pool.servers.map(deploy_server_model_to_clients_tf, pool.clients)\n",
     "        pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
    ]
@@ -265,7 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_n_rounds(n_rounds=4, batch_size=512, epochs=10)"
+    "train_n_rounds(n_rounds=2, batch_size=512, epochs=5)"
    ]
   },
   {
