--- a/notebooks/flex_text_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_simplified.ipynb
@@ -99,9 +99,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.pool.flex_primitives import initialize_server_model_tf\n",
-    "from flex.pool.flex_primitives import deploy_server_model_to_clients_tf\n",
-    "from flex.pool.flex_primitives import collect_weithts_tf\n",
+    "from flex.pool.flex_primitives import init_server_model_tf\n",
+    "from flex.pool.flex_primitives import deploy_server_model_tf\n",
+    "from flex.pool.flex_primitives import collect_clients_weights_tf\n",
     "from flex.pool.flex_primitives import train_tf\n",
     "from flex.pool.flex_primitives import set_aggregated_weights_tf\n",
     "from flex.pool.flex_primitives import evaluate_server_model_tf\n",
@@ -116,7 +116,7 @@
    "source": [
     "# Defining the model\n",
     "\n",
-    "def define_model(*args):\n",
+    "def define_model(**kargs):\n",
     "    model = \"https://tfhub.dev/google/nnlm-en-dim50/2\"\n",
     "    hub_layer = hub.KerasLayer(model, input_shape=[], dtype=tf.string, trainable=True)\n",
     "    model = tf.keras.Sequential()\n",
@@ -146,7 +146,7 @@
    "source": [
     "from flex.pool import FlexPool\n",
     "\n",
-    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model_tf, model=define_model())"
+    "flex_pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=define_model())"
    ]
   },
   {
@@ -167,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(deploy_server_model_to_clients_tf, clients)"
+    "server.map(deploy_server_model_tf, clients)"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aggregator.map(collect_weithts_tf, clients)"
+    "aggregator.map(collect_clients_weights_tf, clients)"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "server.map(deploy_server_model_to_clients_tf, clients)"
+    "server.map(deploy_server_model_tf, clients)"
    ]
   },
   {
@@ -257,15 +257,15 @@
    "outputs": [],
    "source": [
     "def train_n_rounds(n_rounds, batch_size, epochs):  \n",
-    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=initialize_server_model_tf, model=define_model())\n",
-    "    pool.servers.map(deploy_server_model_to_clients_tf, pool.clients)\n",
+    "    pool = FlexPool.client_server_architecture(fed_dataset=flex_dataset, init_func=init_server_model_tf, model=define_model())\n",
+    "    pool.servers.map(deploy_server_model_tf, pool.clients)\n",
     "    for i in range(n_rounds):\n",
     "        print(f\"\\nRunning round: {i}\\n\")\n",
     "        pool.clients.map(train_tf, batch_size=batch_size, epochs=epochs)\n",
-    "        pool.aggregators.map(collect_weithts_tf, pool.clients)\n",
+    "        pool.aggregators.map(collect_clients_weights_tf, pool.clients)\n",
     "        pool.aggregators.map(fed_avg)\n",
     "        pool.aggregators.map(set_aggregated_weights_tf, pool.servers)\n",
-    "        pool.servers.map(deploy_server_model_to_clients_tf, pool.clients)\n",
+    "        pool.servers.map(deploy_server_model_tf, pool.clients)\n",
     "        pool.servers.map(evaluate_server_model_tf, test_data=test_examples, test_labels=test_labels)"
    ]
   },
