Changed ag_news to imdb on test_primitives_tf. Cleaned notebook output.

--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -165,6 +165,9 @@
     "    model.compile(optimizer='adam',\n",
     "                    loss=tf.losses.BinaryCrossentropy(from_logits=True),\n",
     "                    metrics=[tf.metrics.BinaryAccuracy(threshold=0.0, name='accuracy')])\n",
+    "    print(model.loss)\n",
+    "    print(model.optimizer)\n",
+    "    print(model.metrics)\n",
     "    flex_model['model'] = model"
    ]
   },
