--- a/notebooks/flex_mnist_classification_tensorflow_with_decorators.ipynb
+++ b/notebooks/flex_mnist_classification_tensorflow_with_decorators.ipynb
@@ -25,9 +25,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from flex.data import FlexDataDistribution\n",
+    "from flex.data import FlexDataDistribution, FlexDataObject\n",
+    "import numpy as np\n",
     "\n",
-    "flex_dataset, test_data =  FlexDataDistribution.load_femnist(return_test=True)"
+    "flex_dataset, test_data =  FlexDataDistribution.FederatedEMNIST(return_test=True)\n",
+    "\n",
+    "def remove_writer_from_y_data(client_dataset: FlexDataObject):\n",
+    "    new_x_data = client_dataset.X_data\n",
+    "    new_y_data = np.asarray([y[0] for y in client_dataset.y_data])  # each label is a tuple (mnist_label, writer), so we remove the writer\n",
+    "    return FlexDataObject(new_x_data, new_y_data)\n",
+    "\n",
+    "flex_dataset = flex_dataset.map(remove_writer_from_y_data)"
    ]
   },
   {
@@ -39,7 +47,7 @@
     "from flex.pool import init_server_model\n",
     "from flex.pool import FlexPool, FlexModel\n",
     "\n",
-    "def build_server_model():\n",
+    "def build_server_model(*args):\n",
     "    flex_model = FlexModel()\n",
     "\n",
     "    flex_model.model = tf.keras.models.Sequential([\n",
@@ -78,7 +86,7 @@
    "outputs": [],
    "source": [
     "#Filter clients\n",
-    "filtered_pool = p.filter(clients_dropout=0.9)\n",
+    "filtered_pool = p.filter(node_dropout=0.9)\n",
     "\n",
     "clients = filtered_pool.clients\n",
     "total_clients = p.clients\n",
@@ -252,7 +260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit",
+   "display_name": "Python 3.9.13 ('snowflakes')",
    "language": "python",
    "name": "python3"
   },
@@ -266,12 +274,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f9f85f796d01129d0dd105a088854619f454435301f6ffec2fea96ecbd9be4ac"
+    "hash": "e566fdd1bb8982d94cfadd1b83b7d24c79e08c8cc9caeab62a639b678958baae"
    }
   }
  },
