--- a/notebooks/Federating data with FLEXible.ipynb
+++ b/notebooks/Federating data with FLEXible.ipynb
@@ -433,7 +433,7 @@
    "outputs": [],
    "source": [
     "fcd_hf = FlexDataObject.from_huggingface_dataset(\n",
-    "    dataset_hf, X_columns=\"text\", label_column=\"label\"\n",
+    "    dataset_hf, X_columns=\"text\", label_columns=\"label\"\n",
     ")\n",
     "\n",
     "# Create a config and federate the dataset\n",
