--- a/notebooks/flex_text_classification_tensorflow_simplified.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_simplified.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "from flex.data import FlexDataObject\n",
     "\n",
-    "flex_data = FlexDataObject.from_tfds_text_dataset(train_data, X_columns='text', label_column='label')"
+    "flex_data = FlexDataObject.from_tfds_text_dataset(train_data, X_columns='text', label_columns='label')"
    ]
   },
   {
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data = FlexDataObject.from_tfds_text_dataset(test_data, X_columns='text', label_column='label')\n",
+    "test_data = FlexDataObject.from_tfds_text_dataset(test_data, X_columns='text', label_columns='label')\n",
     "test_examples, test_labels = test_data.X_data, test_data.y_data"
    ]
   },
