--- a/notebooks/flex_text_classification_tensorflow_demo.ipynb
+++ b/notebooks/flex_text_classification_tensorflow_demo.ipynb
@@ -88,7 +88,7 @@
    "source": [
     "from flex.data import FlexDataObject\n",
     "\n",
-    "flex_data = FlexDataObject.from_tfds_text_dataset(train_data, X_columns='text', label_column='label')"
+    "flex_data = FlexDataObject.from_tfds_text_dataset(train_data, X_columns='text', label_columns='label')"
    ]
   },
   {
@@ -400,7 +400,7 @@
    "outputs": [],
    "source": [
     "# test_examples, test_labels = test_data\n",
-    "test_examples = FlexDataObject.from_tfds_text_dataset(test_data, X_columns='text', label_column='label')"
+    "test_examples = FlexDataObject.from_tfds_text_dataset(test_data, X_columns='text', label_columns='label')"
    ]
   },
   {
